# AstanaPGL2026

./: .env  pyproject.toml
src/: main.py
src/api/: __init__.py  apiteams.py
src/database/: database.py
src/database/models/: init_db.py  matches.py  players.py  send_player_stats.py  send_players.py  send_teams.py  teams.py
static/: README.txt  index.html  map.html  match.html  matches.html  player.html  team.html  teams.html
static/app/pgl_frontend/: app.js  index.html  rosters.js  styles.css
static/css/: style.css
static/js/: utils.js
